deploy/kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asic-frontend
spec:
  selector:
    app.kubernetes.io/name: asic-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
